GNOME Bugzilla – Bug 753330
Better hint when CDs are not found in MB db
Last modified: 2015-08-17 13:12:33 UTC
See also https://bugzilla.gnome.org/show_bug.cgi?id=537441#c4 I don't rip CDs so often and I don't mind to submit the data, but what happens I always enter the data in sound juicer and then click the submit button, only to see that I have to re-enter the data (or copy and past it). Please at least make that clear in the message. Ideally there would be a way to submit the data I just entered into sj anonymously.
(In reply to Stefan Sauer (gstreamer, gtkdoc dev) from comment #0) > See also > https://bugzilla.gnome.org/show_bug.cgi?id=537441#c4 > > I don't rip CDs so often and I don't mind to submit the data, but what > happens I always enter the data in sound juicer and then click the submit > button, only to see that I have to re-enter the data (or copy and past it). > Thanks for reporting this, the wording of the message could certainly be clearer but at the moment I'm struggling to think of a better phrasing for “This disc is not in the MusicBrainz database, please click ‘Add’ to open your browser and add it to MusicBrainz and then reload the track titles in Sound Juicer” If you've got any ideas for a better wording I'd be glad to hear them. (There is a UI freeze on Monday 17th Aug so I'm keen to resolve this before then) > Ideally there would be a way to submit the data I just entered into sj > anonymously. I'm not sure that MusicBrainz allows anonymous submissions but there is a way to ‘seed‘ the web-editor with some (i.e. titles and artists but not composers) of the information that sound-juicer allows the user to edit [1] which we could look at in the future. 1 - https://musicbrainz.org/doc/Development/Release_Editor_Seeding
Created attachment 309009 [details] [review] Improve wording of submit infobar label I've changed the wording of the infobar to “This album is not in the MusicBrainz database, please click ‘Edit Album’ to open your brower and edit it in MusicBrainz.” I'm not sure if I should add some more saying that any edits in Sound Juicer will not be submitted to MusicBrainz. When the user clicks ‘Edit Album’ the infobar displays “Click ‘Reload’ to load the edited album details from MusicBrainz” to prompt them to load the new album metadata. Try to make it clearer that the user should edit the track names in MusicBrainz if they want to submit a new album. Currently users are confused when they edit the track names in Sound Juicer and it does not submit their edits.
Thanks, this is better. I think the "open your browser and edit it in MusicBrainz" is better.
Thanks for the feedback (and for filing the bug - my brother-in-law mentioned this to me last Christmas and I'd been meaning to do something but hadn't found time to do anything about it.) Attachment 309009 [details] pushed as 18ab6e0 - Improve wording of submit infobar label